<resources>
    <string name="app_name">JKphotography</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JK PHOTOGRAPHY</string>
    <string name="nav_header_subtitle">hello@jobaedkhan.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_album">Wedding Album</string>
    <string name="menu_story">Wedding Story</string>
    <string name="menu_cinematography">Cinematography</string>
    <string name="menu_packages">Packages</string>
    <string name="menu_gallery">Gallery</string>

    <string name="home_second">Home Second</string>
</resources>
